SERVER-115633: Ensure stage builder does not specify duplicate slots (#45666)

GitOrigin-RevId: df93512f3384f1c9301e74170d50bdf3c4bdb512