jstests/query_golden/join_opt/basic_joins_md.js
@@ -333,3 +333,12 @@ runBasicJoinTest([
     {$lookup: {from: foreignColl3.getName(), as: "z", localField: "x.c", foreignField: "c"}},
     {$unwind: "$z"},
 ]);
+
+section("Basic example with a $project adding synthetic fields");
+runBasicJoinTest([
+    {$project: {a: true, extra: "$a"}},
+    {$lookup: {from: foreignColl1.getName(), as: "x", localField: "extra", foreignField: "a"}},
+    {$unwind: "$x"},
+    {$lookup: {from: foreignColl3.getName(), as: "z", localField: "x.c", foreignField: "c"}},
+    {$unwind: "$z"},
+]);
